--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
   "name": "clock",
   "version": "1.0.0",
-  "description": "lala",
+  "description": "a clock",
   "main": "main.js",
   "scripts": {
     "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make"
+    "build": "electron-packager . clock --platform win32 --arch x64 --out dist/",
+    "setup": "electron-installer-windows --src dist/clock-win32-x64/ --dest dist/installers/"
   },
   "keywords": [],
-  "authors": "lala",
+  "author": "myself",
   "license": "ISC",
   "devDependencies": {
-    "@electron-forge/cli": "^6.0.0-beta.54",
-    "@electron-forge/maker-deb": "^6.0.0-beta.54",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.54",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
-    "@electron-forge/maker-zip": "^6.0.0-beta.54",
-    "electron": "^12.0.6"
+    "electron": "^12.0.6",
+    "electron-installer-windows": "^3.0.0",
+    "electron-packager": "^15.2.0"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0"
