use custom clock

--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "clock",
   "version": "1.0.0",
   "description": "a clock",
-  "main": "main.js",
+  "main": "src/app/electron-app.js",
   "scripts": {
     "start": "electron-forge start",
-    "build": "electron-packager . clock --platform win32 --arch x64 --out dist/",
-    "setup": "electron-installer-windows --src dist/clock-win32-x64/ --dest dist/installers/"
+    "build": "electron-packager . clock --platform win32 --arch x64 --out dist/ --overwrite",
+    "package": "electron-installer-windows --config installer-config.json"
   },
   "keywords": [],
-  "author": "myself",
+  "author": "seb",
   "license": "ISC",
   "devDependencies": {
     "electron": "^12.0.6",
